--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Mod\Helpers\Extensions.cs" />
     <Compile Include="Mod\Helpers\LimitedStream.cs" />
     <Compile Include="Mod\Helpers\Logger.cs" />
+    <Compile Include="Mod\Helpers\MTextureOverlay.cs" />
     <Compile Include="Mod\Meta\AtlasFrameMeta.cs" />
     <Compile Include="Mod\Helpers\YamlHelper.cs" />
     <Compile Include="Mod\Oui\OuiModOptions.cs" />
