--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -10,7 +10,7 @@
     <AssemblyName>Celeste.Mod.mm</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-	<FrameworkPathOverride Condition=" '$(TravisCore)' == 'true' ">..\lib-dotnet\</FrameworkPathOverride>
+    <FrameworkPathOverride Condition=" '$(TravisCore)' == 'true' ">..\lib-dotnet\</FrameworkPathOverride>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -85,6 +85,7 @@
     <Compile Include="Mod\Everest\EverestModule.cs" />
     <Compile Include="Mod\Helpers\Extensions.cs" />
     <Compile Include="Mod\Helpers\LimitedStream.cs" />
+    <Compile Include="Mod\Helpers\LogWriter.cs" />
     <Compile Include="Mod\Helpers\Logger.cs" />
     <Compile Include="Mod\Helpers\MTextureOverlay.cs" />
     <Compile Include="Mod\Meta\AtlasFrameMeta.cs" />
