moved travis related stuff to ./travis, added experimental html-gen.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ env:
         - "BUILD_NUMBER=$TRAVIS_BUILD_NUMBER"
         - "BUILD_DIR=$TRAVIS_BUILD_DIR"
 script:
-    - chmod a+x ./replace-version.sh
-    - ./replace-version.sh
+    - chmod a+x ./travis/replace-version.sh
+    - ./travis/replace-version.sh
     - msbuild /p:TravisCore=true /p:Configuration=Release
 after_success:
-    - chmod a+x ./travis-release.sh
-    - ./travis-release.sh
+    - chmod a+x ./travis/travis-release.sh
+    - ./travis/travis-release.sh
