--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Patches\AreaStats.cs" />
     <Compile Include="Patches\LevelEnter.cs" />
     <Compile Include="Patches\Monocle\RendererList.cs" />
+    <Compile Include="Patches\OuiChapterSelect.cs" />
     <Compile Include="Patches\SaveData.cs" />
     <Compile Include="Patches\Monocle\EntityList.cs" />
     <Compile Include="Patches\TextMenu.cs" />
@@ -142,6 +143,30 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Content\Graphics\Atlases\Gui\menu\maplist.meta.yaml">
       <LogicalName>Content\Graphics\Atlases\Gui\menu\maplist.meta.yaml</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\Gui\areas\steam.png">
+      <LogicalName>Content\Graphics\Atlases\Gui\areas\steam.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\Gui\areas\steam.meta.yaml">
+      <LogicalName>Content\Graphics\Atlases\Gui\areas\steam.meta.yaml</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\Gui\areas\steam_back.png">
+      <LogicalName>Content\Graphics\Atlases\Gui\areas\steam_back.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\Gui\areas\steam_back.meta.yaml">
+      <LogicalName>Content\Graphics\Atlases\Gui\areas\steam_back.meta.yaml</LogicalName>
+    </EmbeddedResource>
+	    <EmbeddedResource Include="Content\Graphics\Atlases\Gui\areas\null.png">
+      <LogicalName>Content\Graphics\Atlases\Gui\areas\null.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\Gui\areas\null.meta.yaml">
+      <LogicalName>Content\Graphics\Atlases\Gui\areas\null.meta.yaml</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\Gui\areas\null_back.png">
+      <LogicalName>Content\Graphics\Atlases\Gui\areas\null_back.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\Gui\areas\null_back.meta.yaml">
+      <LogicalName>Content\Graphics\Atlases\Gui\areas\null_back.meta.yaml</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
