Area list cleanup

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -68,9 +68,9 @@
     <Compile Include="Mod\CoreModule\CoreModuleSaveData.cs" />
     <Compile Include="Mod\CoreModule\CoreModuleSettings.cs" />
     <Compile Include="Mod\Everest\Commands.cs" />
-    <Compile Include="Mod\Everest\EverestModuleSaveData.cs" />
-    <Compile Include="Mod\Everest\EverestModuleSettings.cs" />
-    <Compile Include="Mod\Everest\EverestModuleMetadata.cs" />
+    <Compile Include="Mod\Module\EverestModuleSaveData.cs" />
+    <Compile Include="Mod\Module\EverestModuleSettings.cs" />
+    <Compile Include="Mod\Module\EverestModuleMetadata.cs" />
     <Compile Include="Mod\Helpers\AssetMetadata.cs" />
     <Compile Include="Mod\Helpers\ContentExtensions.cs" />
     <Compile Include="Mod\Everest\Everest.Experiments.cs" />
@@ -81,7 +81,7 @@
     <Compile Include="Mod\Everest\Everest.cs" />
     <Compile Include="Mod\CoreModule\CoreModule.cs" />
     <Compile Include="Mod\Helpers\EverestContentManager.cs" />
-    <Compile Include="Mod\Everest\EverestModule.cs" />
+    <Compile Include="Mod\Module\EverestModule.cs" />
     <Compile Include="Mod\Helpers\Extensions.cs" />
     <Compile Include="Mod\Helpers\FakeFileStream.cs" />
     <Compile Include="Mod\Helpers\LimitedStream.cs" />
