--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Patches\AreaStats.cs" />
     <Compile Include="Patches\LevelEnter.cs" />
     <Compile Include="Patches\Input.cs" />
+    <Compile Include="Patches\Monocle\ErrorLog.cs" />
     <Compile Include="Patches\Monocle\RendererList.cs" />
     <Compile Include="Patches\OuiChapterPanel.cs" />
     <Compile Include="Patches\OuiChapterSelectIcon.cs" />
