--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -99,7 +99,9 @@
     <Compile Include="Mod\Everest\Everest.Update.cs" />
     <Compile Include="Mod\Helpers\FakeAssembly.cs" />
     <Compile Include="Mod\Meta\MapMetaCompleteScreen.cs" />
+    <Compile Include="Mod\Module\EverestModuleBinarySaveData.cs" />
     <Compile Include="Mod\Module\EverestModuleSaveData.cs" />
+    <Compile Include="Mod\Module\EverestModuleBinarySettings.cs" />
     <Compile Include="Mod\Module\EverestModuleSettings.cs" />
     <Compile Include="Mod\Module\EverestModuleMetadata.cs" />
     <Compile Include="Mod\Helpers\AssetMetadata.cs" />
@@ -137,6 +139,7 @@
     <Compile Include="Patches\AreaComplete.cs" />
     <Compile Include="Patches\BinaryPacker.cs" />
     <Compile Include="Patches\GameLoader.cs" />
+    <Compile Include="Patches\LevelLoader.cs" />
     <Compile Include="Patches\LevelExit.cs" />
     <Compile Include="Patches\MapData.cs" />
     <Compile Include="Patches\AreaStats.cs" />
