--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Mod\Helpers\YamlHelper.cs" />
     <Compile Include="Mod\Oui\OuiHelper_Shutdown.cs" />
     <Compile Include="Mod\Oui\OuiHelper_ChapterSelect_LevelSet.cs" />
+    <Compile Include="Mod\Oui\OuiModOptionString.cs" />
     <Compile Include="Mod\Oui\OuiLoggedProgress.cs" />
     <Compile Include="Mod\Oui\OuiVersionList.cs" />
     <Compile Include="Mod\Oui\TextMenuExt.cs" />
