--- a/GhostMod/GhostMod.csproj
+++ b/GhostMod/GhostMod.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GhostName.cs" />
     <Compile Include="GhostRecorder.cs" />
     <Compile Include="GhostData.cs" />
     <Compile Include="Ghost.cs" />
