--- a/GhostMod/GhostMod.csproj
+++ b/GhostMod/GhostMod.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GhostName.cs" />
+    <Compile Include="GhostInputReplayer.cs" />
     <Compile Include="GhostRecorder.cs" />
     <Compile Include="GhostData.cs" />
     <Compile Include="Ghost.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="GhostModuleSettings.cs" />
     <Compile Include="GhostModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="GhostInputNodes.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Celeste.Mod.mm\Celeste.Mod.mm.csproj">
