--- a/Celeste.Mod.mm/packages.config
+++ b/Celeste.Mod.mm/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HookedMethod" version="0.3.0-beta" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net452" developmentDependency="true" />
+  <package id="Mono.Cecil" version="0.10.0-beta7" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
 </packages>
